blocks/elements/__container/elements__container.css
.elements__container {
  width: 100%;
  margin-top: 50px;
  margin-bottom: 66px;
  list-style: none;
  padding-left: 0;
  display: grid;
  grid-template-columns: repeat(3, 282px);
  grid-template-rows: repeat(2, 361px);
  gap: 18px 20px;
}

@media screen and (max-width: 320px) {
  .elements__container {
    display: block;
    margin-top: 36px;
    margin-bottom: 48px;
  }
}

